--- a/css/style.css
+++ b/css/style.css
@@ -686,7 +686,7 @@ footer p {
         padding-bottom: 80px;
     }
     .description {
-        padding-bottom: 40px;
+        padding-bottom: 50px;
     }
 
     .practice-page .container {
@@ -702,7 +702,7 @@ footer p {
     .contact-content {
         padding: 30px 0 0;
     }
-    .contact-page footer h2 {
+    /* .contact-page footer h2 {
         font-size: 32px;
         margin-bottom: 0;
     }
@@ -720,7 +720,7 @@ footer p {
     }
 
     .contact-page .contact-address, .contact-social-container {
-        height: 160px; }
+        height: 160px; } */
 
     .contact-page .contact-content .map {
         margin-bottom: 10px;
@@ -741,8 +741,24 @@ footer p {
     }
 
     .container {
-        padding-top: 160px;
+        padding: 130px 15px 0;
     }
+
+    /* Page footer distance */
+    .project-page .container {
+        padding-bottom: 40px;
+    }
+    .practice-page .container {
+        padding: 40px 15px 44px;
+    }
+    .people-page .container {
+        padding-bottom: 54px;
+    }
+    .back-top {
+        margin-bottom: 100px;
+    }
+
+
 
     .right {
         padding-left: 15px;
@@ -751,11 +767,14 @@ footer p {
         padding-right: 15px;
         align-items: flex-start;
     }
+    .proj-desc h2 {
+        font-size: 24px;
+    }
     .proj-img {
         padding-bottom: 5px;
     }
     .project-pb {
-        padding-bottom: 70px;
+        padding-bottom: 60px;
     }
 
 
@@ -765,10 +784,19 @@ footer p {
     .img-mb {
         margin-bottom: 40px;
     }
+    .single-title h2 {
+        font-size: 24px;
+    }
+    .single-title h6 {
+        font-size: 14px;
+    }
 
 
-    .practice-page .container {
-        padding-bottom: 70px;
+    .practice-desc h3 {
+        font-size: 24px;
+    }
+    .practice-desc p {
+        font-size: 14px;
     }
 
 
@@ -781,6 +809,12 @@ footer p {
 
     .person-info {
         margin-left: 0;
+    }
+    .person-info p {
+        font-size: 14px;
+    }
+    .person-name {
+        margin-bottom: 3px;
     }
 
 
@@ -819,22 +853,23 @@ footer p {
     }
 
     .contact-content {
-        padding-top: 50px;
+        padding-top: 70px;
     }
 
-    .contact-page .contact-address, .contact-social-container {
+    .contact-address, .contact-social-container {
         height: auto; 
     }
 
-    .contact-page footer h2 {
+    footer h2 {
         font-size: 28px;
+        margin-bottom: 18px;
     }
 
-    .contact-page footer h3 {
+    footer h3 {
         font-size: 12px;
     }
 
-    .contact-page footer p {
+    footer p {
         font-size: 7px;
     }
 
