--- a/css/style.css
+++ b/css/style.css
@@ -312,6 +312,16 @@ header nav {
     width: 100vw;
 }
 
+.practice-showcase-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #000;
+    opacity: 0.3;
+}
+
 .practice-page .container {
     padding-top: 70px;
     padding-bottom: 280px;
