--- a/css/style.css
+++ b/css/style.css
@@ -378,6 +378,12 @@ header.dark a:hover {
     margin-bottom: 20px;
 }
 
+/* .process-desc {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+} */
+
 .practice-desc h3 {
     font-size: 32px;
 }
@@ -422,9 +428,6 @@ header.dark a:hover {
 
 .person-info {
     margin-left: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 
 .person-name {
@@ -801,6 +804,10 @@ footer p {
 
     .practice-desc h3 {
         padding-bottom: 10px;
+    }
+
+    .person-info {
+        display: block;
     }
 
     .contact-container {
